# src/main/java/com/dxc/ticket/delegate/V1Delegate.java
@@ -5,6 +5,7 @@ import com.dxc.ticket.api.model.Ticket;
 import com.dxc.ticket.service.TicketDetailService;
 import com.dxc.ticket.service.TicketService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 
@@ -41,6 +42,12 @@ public class V1Delegate implements V1ApiDelegate {
     @Override
     public ResponseEntity<List<Ticket>> searchTicketByIsbn(String isbn) {
         return null;
+    }
+
+    @Override
+    public ResponseEntity<Void> setLimitBorrowingBook(String idTicket, Integer limitBookNumber) {
+        ticketService.setLimitBorrowingBook(idTicket, limitBookNumber);
+        return new ResponseEntity(HttpStatus.OK);
     }
 
     @Override
