# target/generated-sources/src/main/java/com/dxc/ticket/api/V1ApiController.java
@@ -48,6 +48,10 @@ public class V1ApiController implements V1Api {
         return delegate.searchTicketByIsbn(isbn);
     }
 
+    public ResponseEntity<Void> setLimitBorrowingBook(@ApiParam(value = "",required=true) @PathVariable("idTicket") String idTicket,@NotNull @ApiParam(value = "", required = true) @Valid @RequestParam(value = "limitBookNumber", required = true) Integer limitBookNumber) {
+        return delegate.setLimitBorrowingBook(idTicket, limitBookNumber);
+    }
+
     public ResponseEntity<String> statisticsIncome(@NotNull @ApiParam(value = "WEEKLY OR MONTHLY OR YEARLY", required = true, allowableValues = "WEEKLY, MONTHLY, YEARLY") @Valid @RequestParam(value = "type", required = true) String type) {
         return delegate.statisticsIncome(type);
     }
